[gd_scene load_steps=5 format=3 uid="uid://chj6niai1tf2a"]

[ext_resource type="SpriteFrames" uid="uid://bgswoj6vthq86" path="res://Assets/SpriteFrames/Weapons/Knife.tres" id="1_w6ls5"]
[ext_resource type="Script" uid="uid://d0e7tvfsldtnc" path="res://Scripts/weapon.gd" id="2_jt064"]
[ext_resource type="Resource" uid="uid://f1cohsjfmu8h" path="res://Assets/Resources/Weapons/pistol.tres" id="3_86ec6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jt064"]
size = Vector2(6, 5.33333)

[node name="Weapon" type="AnimatedSprite2D"]
scale = Vector2(6, 6)
sprite_frames = ExtResource("1_w6ls5")
offset = Vector2(3, -2)
script = ExtResource("2_jt064")
data = ExtResource("3_86ec6")

[node name="ShootPos" type="Marker2D" parent="."]
position = Vector2(6, -1.83333)

[node name="WeaponVerification" type="Area2D" parent="." groups=["Weapon"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponVerification"]
position = Vector2(2, -1.66667)
shape = SubResource("RectangleShape2D_jt064")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="body_entered" from="WeaponVerification" to="." method="_on_weapon_verification_body_entered"]
[connection signal="body_exited" from="WeaponVerification" to="." method="_on_weapon_verification_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="applyReload"]
